# redback-eq

./: CHANGELOG.md  Makefile  README.md
apps/linux/: CMakeLists.txt  README.md  control_client.c  control_client.h  eq_window.c  eq_window.h  main.c  preset_manager.c  preset_manager.h
apps/mac/RadioformApp/: Info.plist  Package.swift
apps/mac/RadioformApp/Sources/Models/: EQPreset.swift
apps/mac/RadioformApp/Sources/Services/: PresetManager.swift
apps/mac/RadioformApp/Sources/Views/: MenuBarView.swift  SettingsWindow.swift  TenBandEQ.swift
apps/web/site/public/: llms-full.txt  llms.txt
apps/web/site/src/app/: globals.css  layout.tsx  page.tsx
apps/web/site/src/app/about/: page.tsx
apps/web/site/src/app/components/: FAQ.tsx  FaqStep.tsx
tools/packaging/linux/: PKGBUILD  build-appimage.sh  build-deb.sh  build.sh  radioform.spec
tools/packaging/linux/debian/DEBIAN/: control  postinst  prerm
tools/packaging/linux/debian/etc/xdg/autostart/: radioform-filter.desktop
tools/packaging/linux/debian/usr/lib/systemd/user/: radioform-filter.service
tools/packaging/linux/debian/usr/share/applications/: radioform.desktop
tools/packaging/linux/debian/usr/share/radioform/presets/: Flat.json
